# Compiler

./: CMakeLists.txt  Latte.tar.xz  Makefile  README  a.out  hello  latc  oucik  output  skrypcik.sh
Latte/: Makefile
Latte/src/backend/: AssemblyCodeGenerator.h  Optimizer.cpp  QuadrupleGenerator.cpp  QuadrupleGenerator.h
Latte/src/frontend/: DeclFrontend.cpp  Frontend.h  TopDefFrontend.cpp
Latte/src/general/: function_def.h  latc.cpp  logger.h  quadruple_environment.cpp  quadruple_environment.h  types.h
Latte/src/grammar/: Lexer.C  Parser.H  Printer.C  Printer.H
lattests/bad/: bad008  bad008.s  bad012  bad012.s  bad021  bad021.s  bad024  bad025  bad025.s
lattests/good/: aaa  aaa.lat  aaa.s  core001  core001.lat  core001.s  core002  core002.s  core003  core003.s  core004  core004.s  core005  core005.s  core006  core006.s  core007  core007.s  core008  core008.s  core009  core009.s  core010  core010.s  core011  core011.s  core012  core012.s  core013  core013.s  core014  core014.s  core015  core015.s  core016  core016.s  core017  core017.s  core018  core018.s  (+28 more)
lib/: runtime.c
src/backend/: AssemblyCodeGenerator.cpp  AssemblyCodeGenerator.h  Optimizer.cpp  Optimizer.h  QuadrupleGenerator.cpp
src/frontend/: DeclFrontend.h  ExprFrontend.cpp  ExprFrontend.h  Frontend.cpp  TopDefFrontend.h
src/general/: environment.cpp  environment.h  function_def.cpp  latc.cpp  logger.cpp  quadruple_environment.cpp  quadruple_environment.h  types.cpp  types.h
src/grammar/: Absyn.C  Absyn.H  Latte.l  Latte.y  Parser.C
test/: a.out  inp  inp.lat  inp.s
